[tool.poetry]
name = "ddd-workshop"
version = "0.1.0"
description = ""
authors = ["Asif Momin <Asif.Momin@nationalgrid.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
